<resources>
    <string name="app_name">PhileStore</string>
    <string name="local_storage">Local Storage</string>
    <string name="rename_folder">Rename file/folder</string>
    <string name="no_file_items">Nothing here</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_group_by">Group by</string>
    <string name="action_sort">Sort</string>
    <string name="action_properties">Properties</string>
    <string name="action_move">Move</string>
    <string name="action_copy">Copy</string>
    <string name="action_compress">Compress</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_paste">Paste</string>
    <string name="sort_title">Sort by</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="hint_search">Filter results</string>
    <string name="action_search">Search</string>
    <string name="search_heading">Showing %1$d results for \"%2$s\"</string>
</resources>
