<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_rename"
        android:title="@string/action_rename"
        app:showAsAction="never"/>

    <!-- always show as icon -->
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="always"/>

    <item android:id="@+id/action_move"
        android:title="@string/action_move"
        app:showAsAction="never"/>

    <item android:id="@+id/action_copy"
        android:title="@string/action_copy"
        app:showAsAction="never"/>

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never"/>

    <!-- always show as icon -->
    <item android:id="@+id/action_paste"
        android:title="@string/action_paste"
        android:icon="@drawable/ic_action_paste"
        app:showAsAction="always"/>

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item android:id="@+id/action_sort"
    android:title="@string/action_sort"
    app:showAsAction="never"/>

</menu>

<!--
Group by
Sort
Refresh

1 selected
Rename
Move
Copy
properties
compress


multiple selected
Move
Copy
Compress


-->